# analysis

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
config/: rgbd_replay.rviz
launch/: postprocess_record.launch  postprocess_rgbd_replay.launch  recompress_throttle_image.launch  record_rectified_rgb.launch  rgbd_replay.launch
nodes/: dataset_stats  label_videos.py
resource/: bag_widget.ui
scripts/: analysis  assemble_visual_tracking_dataset.py  compute_md5sums  count_detected_faces  count_detected_faces.sh  create_video_mosaic  dataset_check_poses_consistency  detect_faces.sh  extract_audio.py  extract_poses.sh  extract_poses_visual_tracking.sh  gaze.py  generate_videos  generate_yaml_bag_description  prepare_visual_tracking_dataset.sh
share/models/: gaze.caffemodel  gaze_estimate_ANN.prototxt
src/: analyse_optical_flow.cpp  check_pose_data.cpp  extract_gaze.cpp  extract_poses.cpp  face_detection.cpp  faces_analysis.cpp  gaze_features.cpp  gaze_features.hpp  head_pose_estimator.cpp  head_pose_estimator.hpp  head_pose_openface.cpp  histogram.hpp  jsoncpp.cpp  mutual_gaze_segmentation.cpp  optical_flow.cpp  pose_analysis.cpp  prepare_visual_tracking_dataset.cpp  replay_with_poses.cpp  vad.cpp
src/freeplay_sandbox_analysis/: __init__.py  bag.py  bag_timeline.py  bag_widget.py  timeline_frame.py  timeline_menu.py
src/freeplay_sandbox_analysis/plugins/: image_helper.py  image_plugin.py  image_timeline_renderer.py  image_view.py  sandtray_item.py  sandtray_plugin.py  sandtray_view.py
