<package>
  <name>freeplay_sandbox_analysis</name>
  <version>0.1.0</version>
  <description>Analysis tools for the freeplay sandbox</description>
  <maintainer email="severin.lemaignan@plymouth.ac.uk">Séverin Lemaignan</maintainer>

  <license>BSD</license>

  <author>Séverin Lemaignan</author>
  <author>Aaron Blasdel</author>
  <author>Tim Field</author>

  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend version_gte="0.2.12">rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
